# Spark

./: .buildinfo  .gitattributes  .gitignore  README.md  _run_editor.py  _run_tests.py  config_rewrite.ipynb  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  pytest.ini  requirements.txt  requirementss.txt  search.html  searchindex.js  test.ipynb  tutorials.html
_prototyping_/: _prototyping_.ipynb  test.scfg
_sources/: index.rst  tutorials.rst
_static/: style.css
autoapi/: index.html
benchmarks/: _brian2.py  _distances.py  _hh.py  _plotting.py  _spark.py  adex_benchmark.ipynb  b2_times_inter_mock.npy  b2_times_non_inter.npy  benchmark_report.ipynb  benchmarks_dirty.ipynb  lif_benchmark.ipynb  run_fidelity.py  run_performance.py  simulation_fidelity.ipynb  simulation_performance.ipynb  simulation_performance_v1.ipynb  simulation_performance_v2.ipynb  simulation_similarity.ipynb  spark_times.npy
dev_tmp_files/: cartpole.ipynb  example_ab_model.scfg  neuron.py
docs/: conf.py  index.rst
spark/: __init__.py
tests/: brain_execution.py  core_typing.py  initializers.py  module_execution.py  neuron_execution.py  signature_parser.py  spark_configs.py  utils_einsum.py
tutorials/: ab_brain.scfg  ab_brain_org.scfg  ab_brain_raw.scfg  alif_mod_neuron.scfg  alif_mod_neuron_org.scfg  alif_mod_neuron_raw.scfg  brains.html  brains.ipynb  building_blocks.ipynb  cartpole copy.ipynb  cartpole.html  cartpole.ipynb  example_ab_model.scfg  execution.html  execution.ipynb  graph_editor.html  graph_editor.ipynb  modules_components.html  neurons.html  (+5 more)
(+416 files in other folders)
